--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "framer-motion": "^11.3.24",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
